welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:16: error: not found: value positionfinale
  while (!positionfinale()) {
          ^